feat(api): hardening + nginx policies update
